--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+          <div class="container">
+             <a href="#" class="brand"> Treebook </a>
+             <ul class="nav"><
+                <li> <%= link_to "All Statuses", statuses_path %></li>
+          </div>
+      </div>
+    </div>
+
+    <div class="container">
 <%= yield %>
 
 </body>
